<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
	android:orientation="vertical" >

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_basic_courtesy" 
        android:onClick="toggleBasicCourtesy"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_good_morning"
        android:onClick="playGoodMorning"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_good_afternoon"
        android:onClick="playGoodAfternoon"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_good_evening"
        android:onClick="playGoodEvening"/>
  	    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_excuse_me"
        android:onClick="playExcuseMe"/>
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_good_day"
        android:onClick="playHaveAGoodDay"/>
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_please"
        android:onClick="playPlease"/>
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_thank_you"
        android:onClick="playThankYou"/>
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_im_sorry"
        android:onClick="playImSorry"/>
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_thank_patience"
        android:onClick="playThankPatience"/>	   	    
	<Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_introduction" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_assessment" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_orders_phrases" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ventilator_events" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_weaning_parameters" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_motivation_cpap" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_arterial_blood" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_extubation" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_incentive_spirometry" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_mdi_nebulizer" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_chest_physiotherapy" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_the_body" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_diseases_conditions" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_time_days" />    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_numbers" />    
</LinearLayout>

